Add start command. Use "npm run start" to run the client.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Peasants eat soup.",
   "main": "Client/client.js",
   "scripts": {
-    "test": "node --harmony Client/client.js"
+    "start": "electron Client/client.js"
   },
   "repository": {
     "type": "git",
