--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Client/client.js",
   "scripts": {
     "start": "electron Client/client.js",
-    "start_client":"electron Client/net.js",
+    "start_client": "electron Client/net.js",
     "start_server": "node --harmony Server/server.js"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/code-broth/soup#readme",
   "dependencies": {
-    "electron-prebuilt": "^1.1.0"
+    "electron-prebuilt": "^1.1.0",
+    "three": "^0.77.1"
   }
 }
